protos: Add min msat swap amount to policy message
